sumo/tests/netconvert/errors/XML/broken_edge/edge#type__empty1/errors.netconvert
Error: Edge '1' has an empty type.
Quitting (on error).
